# SMDF-Client

./: .gitignore  Cargo.toml  LICENSE  README.md
package/docker/: Dockerfile  README.md  start.sh
package/el/: Dockerfile  README.md  build.sh  smdf-client.service  smdf-client.spec  smdf-client.sysconfig
src/: check_executor.rs  consumer.rs  lib.rs  main.rs  timeout.rs
src/aws/: deregistration.rs  mod.rs  registration.rs
src/config/: cli.rs  mod.rs  ssm.rs
src/consumer/: mod.rs
src/messages/: check.rs  mod.rs  registration.rs
