[package]
name = "smdf-client"
version = "0.1.0"
description = "SMDF Client"
license = "UNLICENSED"
authors = ["Dan Aharon <dan@danielaharon.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
simplelog = "0.5.3"
clap = "2.32.0"
rusoto_core = "0.35.0"
rusoto_sqs = "0.35.0"
rusoto_ssm = "0.35.0"
rusoto_lambda = "0.35.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
chrono = { version = "0.4.6", features = ["serde"] }

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
smdf-client = { path = "/usr/bin/smdf-client" }
